users finished and admin
