# api/models/adminsList.js
@@ -1,16 +1,16 @@
-
-const mongoose = require('mongoose');
-const Admin = require('./admins');
-
-const AdminListSchema = mongoose.Schema({
-    _links: {
-        self:{
-            href: String
-        }
-    },
-    _embedded:{
-        adminsList:[ Admin]
-    },
-});
-
-module.exports = mongoose.model('AdminsList', AdminListSchema);
+//
+// const mongoose = require('mongoose');
+// const Admin = require('./admins');
+//
+// const AdminListSchema = mongoose.Schema({
+//     _links: {
+//         self:{
+//             href: String
+//         }
+//     },
+//     _embedded:{
+//         adminsList:[ Admin]
+//     },
+// });
+//
+// module.exports = mongoose.model('AdminsList', AdminListSchema);
